test/expected/set_explicit-ecsu_x.out
set explicit-ecsu=x
                  ^
19: error: "x": invalid value for explicit-ecsu; must be *, -, or {e|c|s|u}+
